Fix color contrast of bulk actions' 'Select all' button

--- a/client/scss/components/_bulk_actions.scss
+++ b/client/scss/components/_bulk_actions.scss
@@ -63,7 +63,10 @@
     }
 
     .num-objects-in-listing {
-      color: theme('colors.text-link-default');
+      // This is inside the footer, which has a dark indigo background in light
+      // mode, so we want to use the absolute value of dark mode's
+      // text-link-default instead of its dynamic value.
+      color: theme('colors.secondary.100');
       background-color: transparent;
       border: 0;
       font-family: theme('fontFamily.sans');
